@@ -1,3 +1,12 @@
+** v3.12, 12.11.2017**
+* Update/Added a lot of skins.
+* Updated the EFL icons.
+* Updated my Layout v2 + new texture.
+* Add an ObjectiveTracker Hider.
+* Added a chat button to increase the chat size.
+* Add an own style for the close buttons.
+* Prevent a rar nil error in FlightPoint.
+
 ** v3.11, 27.10.2017**
 * Fix the UnitFrame tags for v1.
 * Updated my skinning function for stripes/gradient.
