@@ -1,3 +1,12 @@
+[b][color=orange]v3.12[/color], 12.11.2017[/b][list]
+[*]Update/Added a lot of skins.
+[*]Updated the EFL icons.
+[*]Updated my Layout v2 + new texture.
+[*]Add an ObjectiveTracker Hider.
+[*]Added a chat button to increase the chat size.
+[*]Add an own style for the close buttons.
+[*]Prevent a rar nil error in FlightPoint.[/list]
+
 [b][color=orange]v3.11[/color], 27.10.2017[/b][list]
 [*]Fix the UnitFrame tags for v1.
 [*]Updated my skinning function for stripes/gradient.[/list]
